--- a/i3/config
+++ b/i3/config
@@ -191,7 +191,7 @@ bar {
 
 exec --no-startup-id gsettings set org.gnome.desktop.interface gtk-theme 'Yaru-dark'
 
-exec --no-startup-id ~/set_mirror_display.sh
+exec --no-startup-id ~/.config/i3/set_mirror_display.sh
 
 exec --no-startup-id i3-msg "workspace 1; exec --no-startup-id i3-sensible-terminal"
 
