--- a/i3/config
+++ b/i3/config
@@ -9,7 +9,7 @@
 #
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
-set $mod Mod4
+set $mod Mod1
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
@@ -193,7 +193,6 @@ exec --no-startup-id gsettings set org.gnome.desktop.interface gtk-theme 'Yaru-d
 
 exec --no-startup-id ~/.config/i3/set_mirror_display.sh
 
-exec --no-startup-id i3-msg "workspace 1; exec --no-startup-id i3-sensible-terminal"
+exec --no-startup-id redshift -O 4500
 
 bindsym $mod+n exec "~/.config/i3/cycle_ibus.sh"
-
